# go_bang

./: README.md  botzone裁判代码.cpp  作业日志.docx
GUI/: BoardWidget.cpp  BoardWidget.h  CMakeLists.txt  GameLogic.cpp  GameLogic.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  newgamedialog.cpp  newgamedialog.h  newgamedialog.ui  playertype.h
GUI/game_logic/: aimove2.hpp  boards.cpp  boards.hpp  law.cpp  law.hpp  menu.hpp
code/: aimodel.cpp  aimodel.hpp  aimove.cpp  aimove.hpp  aimove2.cpp  aimove2.hpp  board.cpp  board.hpp  boardlaw.cpp  boardlaw.hpp  boards.cpp  boards.hpp  fio.cpp  fio.hpp  law.cpp  law.hpp  main.cpp  menu.cpp  menu.hpp  test.cpp  tmain.cpp  tttt.gob  zobrist.cpp  zobrist.hpp
code/ai/: board.cpp  board.h  cache.cpp  cache.h  config.cpp  config.h  evaluate.cpp  evaluate.h  main.cpp  minmax.cpp  minmax.h  position.h  posotion.cpp  shape.cpp  shape.h  zobrist.cpp  zobrist.h
workgui/untitled/: CMakeLists.txt
日志/: main.aux  main.out  main.synctex.gz.sum.synctex  main.tex  main.toc
日志/logs/: 2024-11-13.aux  2024-11-13.tex  2024-11-27.aux  2024-11-27.tex  2024-11-29.aux  2024-11-29.tex  daymodel.tex
